--- a/web_flask/templates/7-states_list.html
+++ b/web_flask/templates/7-states_list.html
@@ -6,8 +6,8 @@
 	<BODY>
 		<H1>States</H1>
 		<UL>
-			{% for key, value in states %}
-			<LI>{{ key: }}<B>{{ value }}</B></LI>
+			{% for key, value in states.items() %}
+			    <LI>{{ key }}: <B>{{ value }}</B></LI>
 			{% endfor %}
 		</UL>
 	</BODY>
