--- a/web_flask/templates/9-states.html
+++ b/web_flask/templates/9-states.html
@@ -4,23 +4,25 @@
 		<TITLE>AirBnB clone</TITLE>
 	</HEAD>
 	<BODY>
-		{% if states|length  == 1 %}
-		    <H1>State: {{ states['1'].name }}</H1>
-		    <H3>Cities:</H3>
-		    <UL>
-			{% for city in states['1'].cities|sort(attribute="name") %}
-			    <LI>{{ city.id }}: <B>{{ city.name }}</B></LI>
-			{% endfor %}
-		    </UL>
-		{% elif states|length  > 1 %}
+		{% if state_id is not none %}
+		    {% if state|length > 0 %}
+		         <H1>State: {{ state['1'].name }}</H1>
+		         <H3>Cities:</H3>
+			 <UL>
+			 	{% for city in state['1'].cities|sort(attribute="name") %}
+			            <LI>{{ city.id }}: <B>{{ city.name }}</B></LI>
+				{% endfor %}
+		    	 </UL>
+		    {% else %}
+			<H1>Not found!</H1>
+		    {% endif %}
+		{% else %}
 		    <H1>States</H1>
 		    	<UL>
-			    {% for state in states.values()|sort(attribute="name") %}
-			    	<LI>{{ state.id }}: <B>{{ state.name }}</B>
+			    {% for stat in states.values()|sort(attribute="name") %}
+			    	<LI>{{ stat.id }}: <B>{{ stat.name }}</B>
 			    {% endfor %}
 		    	</UL>
-		{% else %}
-		    <H1>Not found!</H1>
 		{% endif %}
 	</BODY>
 </HTML>
