--- a/web_flask/templates/9-states.html
+++ b/web_flask/templates/9-states.html
@@ -4,25 +4,23 @@
 		<TITLE>AirBnB clone</TITLE>
 	</HEAD>
 	<BODY>
-		{% if state_id is not none %}
-		    {% if state|length > 0 %}
-		         <H1>State: {{ state['1'].name }}</H1>
-		         <H3>Cities:</H3>
-			 <UL>
-			 	{% for city in state['1'].cities|sort(attribute="name") %}
-			            <LI>{{ city.id }}: <B>{{ city.name }}</B></LI>
-				{% endfor %}
-		    	 </UL>
-		    {% else %}
-			<H1>Not found!</H1>
-		    {% endif %}
+		{% if state_id is not none and states|length <= 0 %}
+		    <H1>Not found!</H1>
+		{% elif states|length > 0 and state_id is not none %}
+		    <H1>State: {{ states['1'].name }}</H1>
+		    <H3>Cities:</H3>
+		    <UL>
+		        {% for city in states['1'].cities|sort(attribute="name") %}
+			    <LI>{{ city.id }}: <B>{{ city.name }}</B></LI>
+			{% endfor %}
+		    </UL>
 		{% else %}
 		    <H1>States</H1>
-		    	<UL>
-			    {% for stat in states.values()|sort(attribute="name") %}
-			    	<LI>{{ stat.id }}: <B>{{ stat.name }}</B>
-			    {% endfor %}
-		    	</UL>
+		    <UL>
+		        {% for stat in states.values()|sort(attribute="name") %}
+			    <LI>{{ stat.id }}: <B>{{ stat.name }}</B>
+			{% endfor %}
+		    </UL>
 		{% endif %}
 	</BODY>
 </HTML>
