--- a/web_flask/templates/9-states.html
+++ b/web_flask/templates/9-states.html
@@ -4,23 +4,23 @@
 		<TITLE>AirBnB clone</TITLE>
 	</HEAD>
 	<BODY>
-		{% if state_id is not none and states|length <= 0 %}
-		    <H1>Not found!</H1>
-		{% elif states|length > 0 and state_id is not none %}
-		    <H1>State: {{ states['1'].name }}</H1>
+		{% if states is mapping %}
+		    <H1>States</H1>
+                    <UL>
+                        {% for stat in states.values()|sort(attribute="name") %}
+                            <LI>{{ stat.id }}: <B>{{ stat.name }}</B>
+                        {% endfor %}
+                    </UL>
+		{% elif states is defined %}
+		    <H1>State: {{ states.name }}</H1>
 		    <H3>Cities:</H3>
 		    <UL>
-		        {% for city in states['1'].cities|sort(attribute="name") %}
+		        {% for city in states.cities|sort(attribute="name") %}
 			    <LI>{{ city.id }}: <B>{{ city.name }}</B></LI>
 			{% endfor %}
 		    </UL>
 		{% else %}
-		    <H1>States</H1>
-		    <UL>
-		        {% for stat in states.values()|sort(attribute="name") %}
-			    <LI>{{ stat.id }}: <B>{{ stat.name }}</B>
-			{% endfor %}
-		    </UL>
+		    <H1>Not found!</H1>
 		{% endif %}
 	</BODY>
 </HTML>
